# LBP

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE
LBP/src/: CMakeLists.txt  Frame.cpp  Frame.h  Perceptron.cpp  Perceptron.h  Segmentation.cpp  Segmentation.h  main.cpp
